<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">WhatTheCodec</string>
    <string name="content_description_back">Go back</string>
    <string name="message_permission_denied">Permission denied</string>
    <string name="message_couldnt_open_file">Couldn\'t open the file</string>
    <string name="menu_pick_video">Pick Video</string>
    <string name="menu_pick_audio">Pick Audio</string>
    <string name="menu_more">More options</string>
    <string name="menu_settings">@string/settings_title</string>
    <string name="tab_video">Video</string>
    <string name="tab_audio">Audio</string>
    <string name="tab_subtitles">Subtitles</string>
    <string name="info_container">Container</string>
    <string name="info_file_format">File format</string>
    <string name="info_protocol_title">Used protocol</string>
    <string name="info_protocol_file">file</string>
    <string name="info_protocol_pipe">pipe</string>
    <string name="info_bit_rate">Bit rate</string>
    <string name="page_video_preview_missing_decoder">Missing decoder\nPreview is unavailable</string>
    <string name="page_video_preview_frame_decoding_error">Couldn\'t decode this frame</string>
    <string name="page_video_codec_name">Video codec</string>
    <string name="page_video_bit_rate">@string/info_bit_rate</string>
    <string name="page_video_frame_width">Width</string>
    <string name="page_video_frame_height">Height</string>
    <string name="page_stream_title_prefix">Stream #</string>
    <string name="page_audio_codec_name">Audio codec</string>
    <string name="page_audio_bit_rate">@string/info_bit_rate</string>
    <string name="page_audio_channels">Channels</string>
    <string name="page_audio_channel_layout">Channel layout</string>
    <string name="page_audio_sample_rate">Sample rate</string>
    <string name="page_audio_sample_format">Sample format</string>
    <string name="page_audio_sample_rate_postfix">kHz</string>
    <string name="page_subtitle_codec_name">Subtitle codec</string>
    <string name="page_stream_language">Language</string>
    <string name="page_stream_disposition">Disposition</string>
    <string name="stream_disposition_default">Default</string>
    <string name="stream_disposition_dub">Dub</string>
    <string name="stream_disposition_original">Original</string>
    <string name="stream_disposition_comment">Comment</string>
    <string name="stream_disposition_lyrics">Lyrics</string>
    <string name="stream_disposition_karaoke">Karaoke</string>
    <string name="stream_disposition_forced">Forced</string>
    <string name="stream_disposition_hearing_impaired">Hearing impaired</string>
    <string name="stream_disposition_visual_impaired">Visual impaired</string>
    <string name="stream_disposition_clean_effects">Clean effects</string>
    <string name="stream_disposition_attached_pic">Attached pic</string>
    <string name="stream_disposition_timed_thumbnails">Timed thumbnails</string>
    <string name="stream_bitrate_bps">bps</string>
    <string name="stream_bitrate_kbps">kbps</string>
    <string name="stream_bitrate_mbps">Mbps</string>
    <string name="stream_bitrate_gbps">Gbps</string>
    <string name="stream_copy">Copy</string>
    <string name="stream_text_copied_pattern" formatted="false">\"%s\" copied to clipboard</string>
    <string name="empty_root_description">Open a video or audio file\nto see its details</string>
    <string name="empty_root_choose">Choose</string>
    <string name="empty_root_or">or</string>
    <string name="settings_title">Settings</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_about">About</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_battery_saver">Set by Battery Saver</string>
    <string name="settings_theme_system_default">System default</string>
    <string name="settings_theme_title">App Theme</string>
    <string name="settings_source_code_title">Source Code</string>
    <string name="settings_privacy_policy_title">Privacy Policy</string>
</resources>